# kali-automata

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: chaos-schedule.yml  chaos-validate.yml  reusable-chaos.yml
experiments/: cpu-stress.yaml  k-divide-dns.yaml  k-divide-partition.yaml  k-kube-pod-delete.yaml  k-kube-scale-down.yaml  network-latency.yaml
src/kali/: __init__.py  scoring.py
src/kali/api/: __init__.py  db.py  main.py
src/kali/api/routes/: experiments.py  runs.py
src/kali/cli/: __init__.py  app.py
src/kali/engine/: __init__.py  runner.py
src/kali/experiments/: __init__.py  base.py  cpu.py  k_divide.py  k_gravity.py  k_kube.py  k_reaper.py  k_vortex.py  network.py  process.py
src/kali/hypothesis/: __init__.py  probes.py
src/kali/integrations/: __init__.py  base.py  datadog.py  pagerduty.py  prometheus.py
src/kali/mcp/: __init__.py  server.py
src/kali/models/: __init__.py  experiment.py
src/kali/safety/: __init__.py  circuit_breaker.py
tests/unit/: test_circuit_breaker.py  test_injectors.py  test_integrations.py  test_k_kube.py  test_mcp_server.py  test_models.py  test_probes.py  test_runner.py  test_scoring.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  blocks.ts  index.css  workspaceToYaml.ts
ui/src/components/: BlocklyWorkspace.tsx  Header.tsx  Nav.tsx  RunsTable.tsx  ScoreBadge.tsx  ScoreTrend.tsx  StatCard.tsx  YamlPreview.tsx
ui/src/pages/: Dashboard.tsx  RunDetail.tsx  RunHistory.tsx
